--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "reselect": "^4.0.0",
     "styled-components": "^5.2.0"
   },
+  "engines": {
+    "node": "14.18.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
